--- a/templates/base.html
+++ b/templates/base.html
@@ -8,22 +8,18 @@
             }
         </style>
     </head>
-<body>
+    <body>
 
-    <div>
-        <a href='/logout'>log out</a>
-    </div>
+        <div>
+            <a href='/blog'>Main Blog Page</a>
+        </div>
+        <div>
+            <a href='/newpost'>Add a Blog Entry</a>
+        </div>
 
-    {% with messages = get_flashed_messages(with_categories=True) %}
-        <ul>
-        {% for category,message in messages %}
-            <li class="{{category}}">{{message}}</li>
-        {% endfor %}
-        </ul>
-    {% endwith %}
 
-    {% block content %}
-    {% endblock %}
+        {% block content %}
+        {% endblock %}
 
-</body>
+    </body>
 </html>
