--- a/templates/base.html
+++ b/templates/base.html
@@ -9,14 +9,11 @@
         </style>
     </head>
     <body>
-
         <div>
             <a href='/blog'>Main Blog Page</a>
-        </div>
-        <div>
             <a href='/newpost'>Add a Blog Entry</a>
         </div>
-
+        <h1>{{title}}</h1>
 
         {% block content %}
         {% endblock %}
