--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,11 @@
     </head>
     <body>
         <div>
+            <a href='/'>Home</a>
+            <a href='/login'>Log In</a>
             <a href='/blog'>Main Blog Page</a>
             <a href='/newpost'>Add a Blog Entry</a>
+            <a href='/logout'>Log Out</a>
         </div>
         <h1>{{title}}</h1>
 
