--- a/templates/blog.html
+++ b/templates/blog.html
@@ -14,33 +14,17 @@
 
 {% else %}
 
-<!--    <ul>
-            {% for task in tasks %}
-            <li>{{task.name}}
-                <form method="POST" action="/delete-task" style="display:inline-block;">
-                    <input type="hidden" name="task-id" value="{{task.id}}" />
-                    <input type="submit" value="Done!" />
-                </form>
-            </li>
-            {% endfor %}
-        </ul> -->
-
 {% for posts in entries %}
-<form method="POST">
+
 <a href='/blog?id={{posts.id}}'><h2>{{posts.blogtitle}}</h2></a>
 <p>{{posts.blogcontent}}</p>
+<p>written by <a href='/blog?user={{posts.owner.username}}'>{{posts.owner.username}}</a>  </p>
+
 <hr />
 
-</form>
 
 {% endfor %}
 
 {% endif %}
-
-<!--<ul>
-        {% for task in completed_tasks %}
-        <li>{{task.name}}</li>
-        {% endfor %}
-    </ul> -->
 
 {% endblock %}
