--- a/templates/login.html
+++ b/templates/login.html
@@ -2,14 +2,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Log in to Get It Done!</h1>
-<p>If you don't have an account, you may <a href="/register">register</a> for one</p>
+<h1>Log in to Blogz!</h1>
 <form action="/login" method="post">
     <table>
         <tr>
-            <td><label for="email">Email</label></td>
+            <td><label for="username">Username</label></td>
             <td>
-                <input name="email" type="email" value="{{ email }}">
+                <input name="username" type="text" value="{{ username }}">
             </td>
         </tr>
         <tr>
@@ -21,4 +20,7 @@
     </table>
     <input type="submit" value="Login">
 </form>
+<br>
+<p>If you don't have an account, you may <a href="/signup">sign up</a> for one.</p>
+
 {% endblock %}
