--- a/templates/blog.html
+++ b/templates/blog.html
@@ -18,7 +18,7 @@
 
 <a href='/blog?id={{posts.id}}'><h2>{{posts.blogtitle}}</h2></a>
 <p>{{posts.blogcontent}}</p>
-<p>written by <a href='/blog?user={{posts.owner.username}}'>{{posts.owner.username}}</a>  </p>
+<p>written by <a href='/blog?owner={{posts.owner.username}}'>{{posts.owner.username}}</a>  </p>
 
 <hr />
 
