--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,30 @@
 <!doctype html>
 <html>
     <head>
+        <link href="{{ url_for('static', filename='styles.css') }}" rel="stylesheet">
         <title>{{title}}</title>
-        <style>
-            .error {
-                color: red;
-            }
-        </style>
     </head>
     <body>
-        <div>
-            <a href='/'>Home</a>
-            <a href='/login'>Log In</a>
-            <a href='/blog'>Main Blog Page</a>
-            <a href='/newpost'>Add a Blog Entry</a>
-            <a href='/logout'>Log Out</a>
-        </div>
+        <ul class="navi-bar">
+            <li class="text left"><a href='/'>Home</a></li>
+            <li class="text left"><a href='/blog'>Main Blog Page</a></li>
+            <li class="text left"><a href='/newpost'>Add a Blog Entry</a></li>
+
+            <li class="text right"><a href='/login'>Log In</a></li>
+
+            <li class="text right"><a href='/logout'>Log Out</a></li>
+
+
+        </ul>
         <h1>{{title}}</h1>
+
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <p class="error"> {{ message }} </p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
 
         {% block content %}
         {% endblock %}
